# radiomcp

./: .gitignore  API.md  ATTRIBUTION.md  CHANGELOG.md  COPYRIGHT_POLICY.md  DATA_LICENSE.md  DISCLAIMER.md  Dockerfile  LICENSE  MANIFEST.in  MARKETING.md  MCP_REGISTRY_TODO.md  MUSICKIT_SETUP.md  README.md  TAKEDOWN_POLICY.md  blocklist.json  chart_tools_insert.py  pyproject.toml  server.json
.github/ISSUE_TEMPLATE/: takedown-request.yml
.github/workflows/: process-takedown.yml  publish.yml
docs/: DOCUMENTATION.md
radiomcp/: HELP.md  README.md  __init__.py  attribution.txt  blocklist.json  dj_broadcast.py  languages.json  musickit.py  server.py  tui.py
scripts/: setup_musickit.py
